--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -82,6 +82,11 @@
     	<select id="node-input-itemname" name="node-input-itemname" style="width: 250px;">
     	</select>
     </div>
+    <div class="form-row">
+        <label for="node-input-itemname"><i class="fa fa-crosshairs"></i> Only when changed</label>
+        <input type="checkbox" id="node-input-onlywhenchanged" style="display: inline-block; width: auto; vertical-align: top;">
+    	</select>
+    </div>
 </script>
 
 <script type="text/x-red" data-template-name="openhab2-get">
@@ -204,26 +209,19 @@
         <li><b>Name :</b> Optionally specify a name</li>
         <li><b>Controller :</b> Select the openHAB controller</li>
         <li><b>Item :</b>Select the Item to monitor</li>
+        <li><b>Only when changed :</b>Only send output when state changes</li>
    	 </ul>
 	<p></p>
 
-	<b>Messages injected in NodeRED flows (2 channels)</b>
+	<b>Messages injected in NodeRED flows (1 channel)</b>
     <ul>
         <li>Channel 1 :
 			<ul>
         		<li><code>msg.item</code> : the item's itemname (not label)</li>
         		<li><code>msg.topic</code> : "StateEvent"</li>
-        		<li><code>msg.payload</code> : the new state of the selected item</li>
+                <li><code>msg.payload</code> : the current state of the selected item</li>
   	 		</ul>
 		</li>
-        <li>Channel 2 :
-			<ul>
-        		<li><code>msg.item</code> : the item's itemname (not label)</li>
-        		<li><code>msg.topic</code> : "RawEvent"</li>
-        		<li><code>msg.payload</code> : raw (unprocessed) event for the selected item</li>
-  	 		</ul>
-		</li>
-
    	 </ul>
 </script>
 
@@ -432,14 +430,14 @@
         defaults: {
             name:      {value:""},
 		    controller:  {value:"", type:"openhab2-controller", required:true},
-		    itemname:  {value:"", required:true},
+            itemname:  {value:"", required:true},
+            onlywhenchanged: {value: false},
         },
         inputs: 0,
-        outputs: 2,
+        outputs: 1,
         icon: "node-red-contrib-openhab2.png",
         label: function() {
-
-            return(this.name||this.itemname||"openhab2 in");
+            return(this.name||this.itemname||"openhab2 in2");
         },
         oneditprepare: function() {
         	openhabEditPrepare(this, false);
