--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -129,6 +129,26 @@
     </div>
 </script>
 
+<script type="text/x-red" data-template-name="openhab2-get2">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-controller"><i class="fa fa-globe"></i> Controller</label>
+        <input type="text" id="node-input-controller">
+    </div>
+    <div class="form-row">
+        <label for="node-input-itemname"><i class="fa fa-crosshairs"></i> ItemName</label>
+    	<select id="node-input-itemname" name="node-input-itemname" style="width: 250px;">
+    	</select>
+    </div>
+    <div class="form-row">
+        <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
+        <input type="text" id="node-input-topic" name="node-input-topic" style="width: 250px;">
+    </div>
+</script>
+
 <script type="text/x-red" data-template-name="openhab2-monitor">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
@@ -297,14 +317,37 @@
         <li><b>Name :</b> Optionally specify a name</li>
         <li><b>Controller :</b> Select the openHAB controller</li>
         <li><b>Item :</b> Optionally select the Item to address. If specified, it overrides the item specified in the incoming message.</li>
-   	 </ul>
+    </ul>
 	<p></p>
 
 	<b>Messages injected in NodeRED flows (1 channel)</b>
 	The input message with addition of :
     <ul>
         <li><code>msg.payload</code> : the item object (name, label, state, ...)</li>
-         <li><code>msg.payload_in</code> : copy of incoming message's payload</li>
+        <li><code>msg.payload_in</code> : copy of incoming message's payload</li>
+  	</ul>
+</script>
+
+<script type="text/x-red" data-help-name="openhab2-get2">
+    <p>Gets an openHAB Item on an input message.</p>
+	<p></p>
+	<b>Configuration</b>
+    <ul>
+        <li><b>Name :</b> Optionally specify a name</li>
+        <li><b>Controller :</b> Select the openHAB controller</li>
+        <li><b>Item :</b> Optionally select the Item to address. If specified, it overrides the item specified in the incoming message.</li>
+        <li><b>Topic :</b> .topic set in messagespan class="property-type">string</span></dt>    
+    </ul>
+	<p></p>
+
+	<b>Messages injected in NodeRED flows (1 channel)</b>
+	The input message with addition of :
+    <ul>
+        <li><code>msg.item</code> : the item's itemname (not the label)</li>
+        <li><code>msg.topic</code> : the item's topic as specified</li>
+        <li><code>msg.event</code> : "ActualState"</li>
+        <li><code>msg.payload</code> : the current state of the selected item</li>
+        <li><code>msg.payload_in</code> : copy of incoming message's payload</li>
   	</ul>
 </script>
 
@@ -565,6 +608,29 @@
         label: function() {
 
             return(this.name||this.itemname||"openhab2 get");
+        },
+        oneditprepare: function() {
+        	openhabEditPrepare(this, true);
+        }
+    });
+</script>
+
+<script type="text/javascript">
+    RED.nodes.registerType('openhab2-get2',{
+        category: 'home automation',
+        color: '#00cc00',
+        defaults: {
+            name:      {value:""},
+		    controller:  {value:"", type:"openhab2-controller", required:true},
+            itemname:  {value:"", required:false},
+            topic:     {value:"", required: false},
+        },
+        inputs: 1,
+        outputs: 1,
+        icon: "node-red-contrib-openhab2.png",
+        label: function() {
+
+            return(this.name||this.itemname||"openhab2 get2");
         },
         oneditprepare: function() {
         	openhabEditPrepare(this, true);
