Add repeat function fot out2 node

--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -109,8 +109,20 @@
         <label for="node-input-changedto"><i class="fa fa-tag"></i> To (value)</label>
         <input type="text" id="node-input-changedto" placeholder="Changed to">
     </div>
-
-
+    <div class="form-row">
+        <label for="node-input-keepsending"><i class="fa fa-repeat"></i> Repeat sending</label>
+        <input type="checkbox" id="node-input-keepsending" style="display: inline-block; width: auto; vertical-align: top;">
+        </input>
+    </div>
+    <div class="form-row node-keepsending" style="display: block;">
+        <span data-i18n="node-red:inject.every">every</span>
+        <span class="ui-spinner ui-widget ui-widget-content ui-corner-all"><input id="node-input-keepsendingseconds" /></span>
+        <select style="width:100px" id="inject-time-interval-units">
+            <option value="s" data-i18n="node-red:inject.seconds">seconds</option>
+        </select><br>
+        <span>when payload equals</span>
+        <input type="text" id="node-input-keepsendingpayload" style="width:100px" placeholder="payload">
+    </div>
 </script>
 
 <script type="text/x-red" data-template-name="openhab2-get">
@@ -292,6 +304,7 @@
         <li><b>When changed :</b>Send message when node state changes or a command is received (ItemStateChangedEvent or ItemCommandEvent)</li>
         <li><b>From :</b>Old state value. Ignored when left empty. Leave empty for reacting to ItemCommandEvent types.</li>
         <li><b>To :</b>New state value. Ignored when left empty.</li>
+        <li><b>Repeat sending :</b>Repeat sending msg for a specific payload.</li>
    	 </ul>
 	<p></p>
 
@@ -566,6 +579,9 @@
             whenchanged: {value: false},
             changedfrom: {value:"", required: false},
             changedto: {value:"", required: false},
+            keepsending: {value: false},
+            keepsendingpayload: {value:"", required: false},
+            keepsendingseconds: {value:"30", required: false},
         },
         inputs: 0,
         outputs: 1,
@@ -588,6 +604,20 @@
                 $("#node-input-whenchanged").prop("checked",true);
             } else {
                 $("#node-input-whenchanged").prop("checked",false);
+            }
+            $("#node-input-keepsending").change(function() {
+                if ($(this).is(":checked")) {
+                    $(".node-keepsending").show();
+                } else {
+                    $(".node-keepsending").hide();
+                    $('#node-input-keepsendingpayload').val('');
+                    $('#node-input-keepsendingseconds').val('30');
+                }
+            });
+            if (this.keepsending === "true" || this.keepsending === true) {
+                $("#node-input-keepsending").prop("checked",true);
+            } else {
+                $("#node-input-keepsending").prop("checked",false);
             }
         }
     });
