Show repeating status

--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -500,7 +500,7 @@
            			username: cntrlConfig.username,
            			password: cntrlConfig.password
             	}
-            	console.log("config = " + JSON.stringify(config));
+            	//console.log("config = " + JSON.stringify(config));
                 $.getJSON("openhab2/items", config)
                   .done( function(data) {
 
