--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -17,7 +17,7 @@
   limitations under the License.
 
 -->
-<script type="text/x-red" data-template-name="openhab2-controller">
+<script type="text/x-red" data-template-name="openhab2-controller2">
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-config-input-name" placeholder="Name">
@@ -191,7 +191,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-template-name="openhab2-monitor">
+<script type="text/x-red" data-template-name="openhab2-monitor2">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -267,7 +267,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-template-name="openhab2-events">
+<script type="text/x-red" data-template-name="openhab2-events2">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -278,7 +278,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="openhab2-controller">
+<script type="text/x-red" data-help-name="openhab2-controller2">
     <p>Configuration node for communication with an openHAB controller.</p>
     <p></p>
     <b>Configuration</b>
@@ -349,8 +349,8 @@
       </ul>
 </script>
 
-<script type="text/x-red" data-help-name="openhab2-monitor">
-    <p>Monitors the openhab2-controller node.</p>
+<script type="text/x-red" data-help-name="openhab2-monitor2">
+    <p>Monitors the openhab2-controller2 node.</p>
     <p></p>
     <b>Configuration</b>
     <ul>
@@ -424,7 +424,7 @@
 
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-controller', {
+    RED.nodes.registerType('openhab2-controller2', {
         category: 'config',
         defaults: {
             name: {value:"",required:true},
@@ -436,7 +436,7 @@
             password: {value:"", required:false},
             ohversion: {value:"v2",required:true}
         },
-        paletteLabel: "openhab2-controller",
+        paletteLabel: "openhab2-controller2",
         label: function() {
             return this.name;
         }
@@ -520,7 +520,7 @@
         color: '#00cc00',
         defaults: {
             name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller", required: true},
+            controller:  {value:"", type:"openhab2-controller2", required: true},
             itemname:  {value:"", required: true},
             topic:     {value:"", required: false},
             initialstate: {value: false},
@@ -533,7 +533,7 @@
         inputs: 0,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
-        paletteLabel: "openhab2-in",
+        paletteLabel: "openhab2-in2",
         label: function() {
             return(this.name||this.itemname||"openhab2 in2");
         },
@@ -563,14 +563,14 @@
         color: '#00cc00',
         defaults: {
             name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller", required:true},
+            controller:  {value:"", type:"openhab2-controller2", required:true},
             itemname:  {value:"", required:false},
             topic:     {value:"", required: false},
         },
         inputs: 1,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
-        paletteLabel: "openhab2-get",
+        paletteLabel: "openhab2-get2",
         label: function() {
 
             return(this.name||this.itemname||"openhab2 get2");
@@ -582,12 +582,12 @@
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-monitor',{
+    RED.nodes.registerType('openhab2-monitor2',{
         category: 'home automation',
         color: '#00cc00',
         defaults: {
             name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller", required:true}
+            controller:  {value:"", type:"openhab2-controller2", required:true}
         },
         inputs: 0,
         outputs: 3,
@@ -608,7 +608,7 @@
         color: '#00cc00',
         defaults: {
             name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller", required:true},
+            controller:  {value:"", type:"openhab2-controller2", required:true},
             itemname:  {value:"", required:false},
             topic: {value:"", required:false},
             payload:  {value:"", required:false},
@@ -617,7 +617,7 @@
         inputs: 1,
         outputs: 0,
         icon: "node-red-contrib-openhab2.png",
-        paletteLabel: "openhab2-out",
+        paletteLabel: "openhab2-out2",
         label: function() {
             return(this.name||this.itemname||"openhab2 out2");
         },
@@ -628,21 +628,21 @@
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-events',{
+    RED.nodes.registerType('openhab2-events2',{
         category: 'home automation',
         color: '#0fdd0f',
         defaults: {
             name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller", required:true},
+            controller:  {value:"", type:"openhab2-controller2", required:true},
             itemname:  {value:"", required:false},
         },
         inputs: 0,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
-        paletteLabel: "openhab2-events",
+        paletteLabel: "openhab2-events2",
         label: function() {
 
-            return(this.name||this.itemname||"openhab2 events");
+            return(this.name||this.itemname||"openhab2 events2");
         },
         oneditprepare: function() {
             //openhabEditPrepare(this, true);
