Fix issue #6 (openhab2-events2 and OpenHAB v3)

--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -641,11 +641,10 @@
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-events2",
         label: function() {
-
             return(this.name||this.itemname||"openhab2 events2");
         },
         oneditprepare: function() {
-            //openhabEditPrepare(this, true);
+            openhabEditPrepare(this, true);
         }
     });
 </script>
